--- a/2.css
+++ b/2.css
@@ -1,5 +1,6 @@
 html, body {
-    width: 50%;
+    color: blue;
+    width: 100%;
     margin: 0 auto;
     font-family: Arial, Helvetica, sans-serif;
 }
