--- a/2.css
+++ b/2.css
@@ -34,4 +34,6 @@ calc()
 
 .to-dos {
     margin-top: 25px;
-}
+} })
+paragraph.addEventListener('dblclick', function(){
+    toDoContainer.removeChild(paragraph);
