--- a/2.css
+++ b/2.css
@@ -28,12 +28,6 @@ calc()
 
 .paragraph-styling {
     margin: 0;
-    cursor: pointer;
-    font-size: 20px;
-}
-
-.to-dos {
-    margin-top: 25px;
-} })
-paragraph.addEventListener('dblclick', function(){
-    toDoContainer.removeChild(paragraph);
+     nikhel
+     neha 
+     rahul
