--- a/2.css
+++ b/2.css
@@ -31,3 +31,9 @@ calc()
      nikhel
      neha 
      rahul
+
+     
+    toDoContainer.appendChild
+    inputField.value = "";
+    paragraph.addEventListener('click', function(){
+        paragraph.style
